[package]
name = "meta-collect"
version = "0.1.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version="0.5", features=["sqlite", "runtime-async-std-native-tls", "offline"]}
async-std = { version = "1.9", features = [ "attributes" ] }
anyhow = "1.0"
structopt ="0.3"
futures = "0.3"
walkdir = "2.3"
mime_guess = "2.0"
media_info = {git="https://github.com/izderadicka/audioserve", features=["partially-static"]}



